# brewery-dwh

./: .gitignore  01--process-definitions.md  01-01--product-development.md  README.md
deployment/: README.md  docker-compose.yml
deployment/postgres/: Dockerfile
deployment/postgres/ddl/: README.md
deployment/postgres/init/: init.sh
models/: 01--reference-data.ddl.sql  02--product-development.ddl.sql  04--production.ddl.sql  05--sales.ddl.sql
models/RandomDataGeneration/: DummyDataGenerator.ipynb
models/data_vault/: pd.sql.ddl
random-generation/: DB_insert_select.py  DummyDataGenerator.ipynb  PDDataGenerator.py  ProductionDataGenerator.py  README.md  ReferenceDataGenerator.py  SalesDataGenerator.py  config.py  pyproject.toml
simulation/: .gitignore  pom.xml
simulation/src/main/java/common/: DatabaseConfiguration.java  Operators.java  P.java  ProbabilityDistribution.java  Templates.java
simulation/src/main/java/common/configs/: ApplicationConfiguration.java  Configs.java  DatabaseConfiguration.java
simulation/src/main/java/simulation/: Application.java  Greeter.java  Operators.java  P.java  SayHello.java  World.java
simulation/src/main/java/simulation/clock/: Clock.java  KillSwitch.java  PeriodicEvent.java  ScheduledEvent.java  Scheduler.java  SingleEvent.java
simulation/src/main/java/systems/brewery/: Brewery.java  BreweryManagementSystem.java  Brews.java  BrewsJdbcImpl.java  IngredientProducts.java  IngredientProductsJdbcImpl.java  IngredientProductsTmp.java  Ingredients.java  Recipes.java  (+2 more)
simulation/src/main/resources/: application.conf
(+244 files in other folders)
