[tool.poetry]
name = "random-generation"
version = "0.1.0"
description = "A small tool to generate random values in the Brewery DWH Project"
authors = ["AiPunk <johannes.forster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
names = "^0.3.0"
psycopg2-binary = "^2.9.2"
jupyter = "^1.0.0"
pandas = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
